initial styling & update copy

--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,247 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto Mono'), local('RobotoMono-Regular'), url(https://fonts.gstatic.com/s/robotomono/v7/L0x5DF4xlVMF-BfR8bXMIjhLq3o.ttf) format('truetype');
+}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  font-size: 62.5%;
+}
+.container {
+  max-width: 95%;
+  margin: 0 auto;
+  font-family: "Roboto Mono", mono-space;
+  font-size: 1.6rem;
+}
+.container .heading {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+}
+.container .header-container {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 2.5vh;
+}
+.container .header-container header {
+  width: 40%;
+}
+.container .header-container header nav {
+  display: flex;
+  justify-content: space-between;
+}
+.container .header-container header nav a {
+  text-decoration: none;
+  color: #1a1c1c;
+}
+.container .header-container header nav a:hover {
+  color: #686e6e;
+  font-weight: bold;
+}
+.container .hero {
+  background-color: #d9dede;
+  padding: 5%;
+  margin-top: 2.5vh;
+}
+.container .hero h1 {
+  font-size: 4rem;
+}
+.container .hero h5 {
+  font-size: 2.4rem;
+}
+.container .btn {
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 3px;
+  font-family: "Roboto", sans-serif;
+  background-color: #686e6e;
+  color: white;
+  margin-top: 2.5%;
+}
+.container .btn:hover {
+  background-color: #4f5454;
+}
+.container .details {
+  margin-top: 5vh;
+}
+.container .details .column-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.container .details .col-lg {
+  width: 60%;
+  padding-right: 2.5vw;
+}
+.container .details .col-lg p {
+  line-height: 1.5;
+}
+.container .details .col-sm {
+  width: 40%;
+  text-align: center;
+}
+.container .details .col-sm table {
+  width: 100%;
+}
+.container .details .heading {
+  font-size: 3rem;
+  margin-bottom: 1.25vh;
+}
+.container .details thead,
+.container .details th,
+.container .details td {
+  border: 1px solid grey;
+  padding: 10px;
+}
+.container .history table {
+  width: 100%;
+  text-align: center;
+}
+.container footer {
+  background-color: #686e6e;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  margin-top: 2.5vh;
+}
