--- a/less/index.less
+++ b/less/index.less
@@ -4,56 +4,273 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap");
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
+  font-size: 62.5%;
 }
 
+// begin my code
+
+@font-primary: "Roboto Mono", mono-space;
+@font-heading: "Roboto", sans-serif;
+
+@color-nearblack: #1a1c1c;
+@color-lightgrey: #d9dede;
+@color-midgrey: #686e6e;
+
+@size-default-font: 1.6rem;
+@size-border-radius: 3px;
+
+.container {
+  max-width: 95%;
+  margin: 0 auto;
+  font-family: @font-primary;
+  font-size: @size-default-font;
+
+  .heading {
+    font-family: @font-heading;
+    font-weight: bold;
+  }
+
+  .header-container {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 2.5vh;
+
+    header {
+      width: 40%;
+
+      nav {
+        display: flex;
+        justify-content: space-between;
+
+        a {
+          text-decoration: none;
+          color: @color-nearblack;
+
+          &:hover {
+            color: @color-midgrey;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+
+  .hero {
+    background-color: @color-lightgrey;
+	padding: 5%;
+	margin-top: 2.5vh;
+
+    h1 {
+      font-size: 4rem;
+    }
+
+    h5 {
+      font-size: 2.4rem;
+    }
+  }
+
+  .btn {
+    display: inline-block;
+    text-decoration: none;
+    padding: 10px 15px;
+    border-radius: @size-border-radius;
+    font-family: @font-heading;
+    background-color: @color-midgrey;
+    color: white;
+    margin-top: 2.5%;
+
+    &:hover {
+      background-color: darken(@color-midgrey, 10%);
+    }
+  }
+
+  .details {
+	margin-top: 5vh;
+
+    .column-wrapper {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .col-lg {
+	  width: 60%;
+	  padding-right: 2.5vw;
+	  
+	  p {
+		  line-height: 1.5;
+	  }
+    }
+
+    .col-sm {
+      width: 40%;
+      text-align: center;
+
+      table {
+        width: 100%;
+      }
+    }
+
+    .heading {
+	  font-size: 3rem;
+	  margin-bottom: 1.25vh;
+    }
+
+    thead,
+    th,
+    td {
+      border: 1px solid grey;
+      padding: 10px;
+    }
+  }
+
+  .history {
+	
+	table {
+		width: 100%;
+		text-align: center;
+	}
+  }
+
+  footer {
+	  background-color: @color-midgrey;
+	  color: white;
+	  text-align: center;
+	  padding: 20px;
+	  margin-top: 2.5vh;
+  }
+}
