--- a/css/index.css
+++ b/css/index.css
@@ -150,10 +150,26 @@ body {
   font-size: 62.5%;
 }
 .container {
-  max-width: 95%;
+  width: 50%;
   margin: 0 auto;
   font-family: "Roboto Mono", mono-space;
   font-size: 1.6rem;
+  transition: 0.2s ease-in-out width;
+}
+@media (max-width: 1280px) {
+  .container {
+    width: 67%;
+  }
+}
+@media (max-width: 900px) {
+  .container {
+    width: 80%;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
 }
 .container .heading {
   font-family: "Roboto", sans-serif;
@@ -165,7 +181,17 @@ body {
   padding-top: 2.5vh;
 }
 .container .header-container header {
-  width: 40%;
+  width: 50%;
+}
+@media (max-width: 700px) {
+  .container .header-container header {
+    width: 75%;
+  }
+}
+@media (max-width: 500px) {
+  .container .header-container header {
+    width: 100%;
+  }
 }
 .container .header-container header nav {
   display: flex;
@@ -183,6 +209,13 @@ body {
   background-color: #d9dede;
   padding: 5%;
   margin-top: 2.5vh;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+}
+.container .hero img {
+  border-radius: 50%;
+  width: 50%;
+  max-width: 300px;
+  margin-bottom: 2.5vh;
 }
 .container .hero h1 {
   font-size: 4rem;
@@ -204,21 +237,33 @@ body {
   background-color: #4f5454;
 }
 .container .details {
-  margin-top: 5vh;
+  margin-top: 2.5vh;
 }
 .container .details .column-wrapper {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 2.5vh;
+}
+@media (max-width: 500px) {
+  .container .details .column-wrapper {
+    flex-direction: column;
+  }
+  .container .details .column-wrapper .col-lg {
+    width: 100%;
+  }
+  .container .details .column-wrapper .col-sm {
+    width: 100%;
+  }
 }
 .container .details .col-lg {
-  width: 60%;
+  width: 70%;
   padding-right: 2.5vw;
 }
 .container .details .col-lg p {
   line-height: 1.5;
 }
 .container .details .col-sm {
-  width: 40%;
+  width: 30%;
   text-align: center;
 }
 .container .details .col-sm table {
@@ -231,17 +276,86 @@ body {
 .container .details thead,
 .container .details th,
 .container .details td {
-  border: 1px solid grey;
   padding: 10px;
+}
+.container .details tr:nth-of-type(even) {
+  background-color: #ffffff;
+}
+.container .details tr:nth-of-type(odd) {
+  background-color: #d9dede;
 }
 .container .history table {
   width: 100%;
   text-align: center;
+  margin-bottom: 5vh;
+}
+.container .history thead {
+  border: 1px solid rgba(200, 200, 200, 0.75);
+}
+.container .history th {
+  background-color: white;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 .container footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #686e6e;
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 10px;
   margin-top: 2.5vh;
+  box-shadow: 0 -6px 5px rgba(0, 0, 0, 0.2);
+  font-size: 1.2rem;
+  font-family: "Roboto", sans-serif;
+  color: #d9dede;
+}
+.container .contact .contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10vh;
+}
+.container .contact .contact-wrapper h1 {
+  font-size: 4rem;
+  margin-bottom: 2.5vh;
+}
+.container .contact .contact-wrapper .contact-form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-bottom: 140px;
+  transition: 0.3s ease-in-out all;
+}
+@media (max-width: 850px) {
+  .container .contact .contact-wrapper .contact-form {
+    width: 75%;
+  }
+}
+@media (max-width: 500px) {
+  .container .contact .contact-wrapper .contact-form {
+    width: 100%;
+  }
+}
+.container .contact .contact-wrapper .contact-form label {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.container .contact .contact-wrapper .contact-form input,
+.container .contact .contact-wrapper .contact-form textarea {
+  background: #ccc;
+  border: none;
+  padding: 5px;
+  margin-bottom: 20px;
+}
+.container .contact .contact-wrapper .contact-form input:last-of-type {
+  width: 34%;
+  transition: 0.2s ease-out all;
+}
+.container .contact .contact-wrapper .contact-form input:last-of-type:hover {
+  cursor: pointer;
+  background: black;
+  color: white;
 }
