--- a/css/index.css
+++ b/css/index.css
@@ -261,6 +261,7 @@ body {
 }
 .container .details .col-lg p {
   line-height: 1.5;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .container .details .col-sm {
   width: 30%;
@@ -358,4 +359,22 @@ body {
   cursor: pointer;
   background: black;
   color: white;
+}
+.p5 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  overflow: hidden;
+}
+.p5 #p5-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.p5 #p5-container canvas {
+  width: 100% !important;
+  height: auto !important;
 }
